--- a/form.html
+++ b/form.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
 	<title>Blood Donation Form</title>
+	<link href="css/style.css" rel='stylesheet' type='text/css' />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<form action="Blood_donor.php" method="post">
