--- a/form.html
+++ b/form.html
@@ -13,98 +13,104 @@
 	<form action="donor.php" method="post" >
         <input type="hidden" name="cid" value="1">
         <input type="hidden" name="auth" value="f54e05cab9203e08d86606cb339e853d">
-        <h1 text-align: center;>General Details</h1>
+
+		<h1 style="text-align: center;">General Details</h1>
+
 		<p>Name:<br><input type="text" name="name"><br></p>
 		<p>Roll No.(IITK):<br><input type="number" name="roll_no"><br>
-		<p>Gender: <br><input type="radio" name="gender" value="male" checked> Male<br>
+		<p>Gender: <br><input type="radio" name="gender" value="male"> Male<br>
                <input type="radio" name="gender" value="female"> Female<br>
                 <input type="radio" name="gender" value="other"> Others<br></p>
         <p>Contact No:<br> <input type="number" name="phone_no"><br></p>
         <p>Age:<br> <input type="number" name="age" min="15" max="100"><br></p>
-        <p>Blood Group:<br> <input type="radio" name="blood_group" value="A+" checked>A+<br>
-                     <input type="radio" name="blood_group" value="A-" >A-<br>
-                     <input type="radio" name="blood_group" value="B+" >B+<br>
-                     <input type="radio" name="blood_group" value="B-" >B-<br>
-                     <input type="radio" name="blood_group" value="O+" >O+<br>
-                     <input type="radio" name="blood_group" value="O-" >O-<br>
-                     <input type="radio" name="blood_group" value="AB+" >AB+<br>
-                     <input type="radio" name="blood_group" value="AB-" >AB-<br>
-                     <input type="radio" name="blood_group" value="notsure" >Others/Don't Know<br></p>
+        <p>Blood Group:<br> 
+			<input type="radio" name="blood_group" value="A+">A+<br>
+			<input type="radio" name="blood_group" value="A-" >A-<br>
+            <input type="radio" name="blood_group" value="B+" >B+<br>
+            <input type="radio" name="blood_group" value="B-" >B-<br>
+			<input type="radio" name="blood_group" value="O+" >O+<br>
+			<input type="radio" name="blood_group" value="O-" >O-<br>
+			<input type="radio" name="blood_group" value="AB+" >AB+<br>
+			<input type="radio" name="blood_group" value="AB-" >AB-<br>
+			<input type="radio" name="blood_group" value="notsure" >Others/Don't Know<br></p>
         <p>Address: <br><input type="text" name="address"><br></p>
         <p>Email Id: <br><input type="text" name="email"><br></p>
-        <p>How do you know about this Camp?<br><input type="radio" name="camp_know" value="1" checked>Posters<br>
-                                        <input type="radio" name="camp_know" value="2">Mail<br>
-                                        <input type="radio" name="camp_know" value="3">Friends<br>
-                                        <input type="radio" name="camp_know" value="4">Facebook<br>
-                                        <input type="radio" name="camp_know" value="5">Other<br>
+        <p>How do you know about this Camp?<br>
+        	<input type="radio" name="camp_know" value="Posters">Posters<br>
+	        <input type="radio" name="camp_know" value="Mail">Mail<br>
+    	    <input type="radio" name="camp_know" value="Friends">Friends<br>
+            <input type="radio" name="camp_know" value="Facebook">Facebook<br>
+            <input type="radio" name="camp_know" value="Other">Other<br>
         </p>
-      <h1>Medical Details</h1>
-     <p> Have you donated blood before?<br> 
-      <input type="radio" name="d_his" value="1" checked> Yes <br>
-      <input type="radio" name="d_his" value="2" > No <br></p>
-      <p>When was the last time you donated?<br> 
-      <input type="text" name="l_don"><br></p>
+        
+		<h1 style="text-align: center;">Medical Details</h1>
+		
+     <p>Have you donated blood before?<br> 
+      <input type="radio" name="q1" value="1"> Yes <br>
+      <input type="radio" name="q1" value="2" > No <br></p>
+     <p>Was your last donation within last three months?<br>
+      <input type="radio" name="q2" value="1"> Yes <br>
+      <input type="radio" name="q2" value="2"> No <br>
      <p> Did you have any discomfort while donation ?<br>
-       <input type="radio" name="discomfort" value="1" checked> Yes<br>
-       <input type="radio" name="discomfort" value="2" > No<br>
-       <input type="radio" name="discomfort" value="3" checked> N/A<br></p>
-     <p> Are you feeling well today?<br>
-      <input type="radio" name="well" value="1" checked> Yes<br>
-      <input type="radio" name="well" value="2" > No<br></p>
+       <input type="radio" name="q3" value="1"> Yes<br>
+       <input type="radio" name="q3" value="2" > No<br>
+     <p>Are you feeling well today?<br>
+      <input type="radio" name="q4" value="1"> Yes<br>
+      <input type="radio" name="q4" value="2"> No<br></p>
       <p>Did you sleep well last night?<br>
-      <input type="radio" name="sleep" value="1" checked> Yes<br>
-      <input type="radio" name="sleep" value="2" > No<br></p>
+      <input type="radio" name="q5" value="1"> Yes<br>
+      <input type="radio" name="q5" value="2"> No<br></p>
       <p>Have you had anything to eat in last 4 hours?<br>
-      <input type="radio" name="eat" value="1" checked> Yes<br>
-      <input type="radio" name="eat" value="2" > No<br></p>
+      <input type="radio" name="q6" value="1"> Yes<br>
+      <input type="radio" name="q6" value="2"> No<br></p>
       <p>Do you have any reason to believe that you are infected with Hepatitis, Malaria,HIV/AIDS , Veneral Disease?<br>
-      <input type="radio" name="hiv" value="1" checked> Yes<br>
-      <input type="radio" name="hiv" value="2" > No<br></p>
+      <input type="radio" name="q7" value="1"> Yes<br>
+      <input type="radio" name="q7" value="2"> No<br></p>
       <p>In last six months have you had history of any of the following?<br>
-      <input type="radio" name="history" value="1" checked> Unexpected Weight Loss<br>
-      <input type="radio" name="history" value="2" > Repeated Diarrhea<br>
-      <input type="radio" name="history" value="3" > Continous Cold n Cough<br>
-      <input type="radio" name="history" value="4" > Continous Low Grade Fever<br>
-      <input type="radio" name="history" value="5" > None of the above<br></p>
+      <input type="radio" name="q8" value="1"> Unexpected Weight Loss<br>
+      <input type="radio" name="q8" value="2"> Repeated Diarrhea<br>
+      <input type="radio" name="q8" value="3"> Continous Cold n Cough<br>
+      <input type="radio" name="q8" value="4"> Continous Low Grade Fever<br>
+      <input type="radio" name="q8" value="5" > None of the above<br></p>
       <p>In last six months have you had any of the following?<br>
-      <input type="radio" name="extra_thing" value="1" checked> Tattooing<br>
-      <input type="radio" name="extra_thing" value="2" > Ear/Body Piercing<br>
-      <input type="radio" name="extra_thing" value="3" > Dental Extraction<br>
-      <input type="radio" name="extra_thing" value="4" > Accupuncture<br>
-      <input type="radio" name="extra_thing" value="5" > None of the above<br></p>
+      <input type="radio" name="q9" value="1"> Tattooing<br>
+      <input type="radio" name="q9" value="2"> Ear/Body Piercing<br>
+      <input type="radio" name="q9" value="3"> Dental Extraction<br>
+      <input type="radio" name="q9" value="4"> Accupuncture<br>
+      <input type="radio" name="q9" value="5"> None of the above<br></p>
       <p>Do you suffer from any of the following diseases?<br>
-      <input type="radio" name="diseases" value="1" checked> Heart/Lung/Kidney Disease<br>
-      <input type="radio" name="diseases" value="2"> Cancer/Malignant Disease<br>
-      <input type="radio" name="diseases" value="3"> Malaria/Tuberculosis<br>
-      <input type="radio" name="diseases" value="4"> Diabetes<br>
-      <input type="radio" name="diseases" value="5"> Allergic Disease/Jaundice/Hepatitis B-C<br>
-      <input type="radio" name="diseases" value="6"> Abnormal Bleeding Tendency/Fainting Spells<br>
-      <input type="radio" name="diseases" value="7"> None of the above<br></p>
+      <input type="radio" name="q10" value="1"> Heart/Lung/Kidney Disease<br>
+      <input type="radio" name="q10" value="2"> Cancer/Malignant Disease<br>
+      <input type="radio" name="q10" value="3"> Malaria/Tuberculosis<br>
+      <input type="radio" name="q10" value="4"> Diabetes<br>
+      <input type="radio" name="q10" value="5"> Allergic Disease/Jaundice/Hepatitis B-C<br>
+      <input type="radio" name="q10" value="6"> Abnormal Bleeding Tendency/Fainting Spells<br>
+      <input type="radio" name="q10" value="7"> None of the above<br></p>
       <p>Have you had any of the following in last 72 hours?<br>
-      <input type="radio" name="72_hrs" value="1" checked> Antibiotics/Aspirin/Antiallergy<br>
-      <input type="radio" name="72_hrs" value="2"> Insulins/Steroids/Hormones<br>
-      <input type="radio" name="72_hrs" value="3"> Contraceptive/Immunization pills<br>
-      <input type="radio" name="72_hrs" value="4"> Vaccination / Rabies Vaccine<br>
-      <input type="radio" name="72_hrs" value="5"> Alchohol<br>
-      <input type="radio" name="72_hrs" value="6"> None of the above<br></p>
+      <input type="radio" name="q11" value="1"> Antibiotics/Aspirin/Antiallergy<br>
+      <input type="radio" name="q11" value="2"> Insulins/Steroids/Hormones<br>
+      <input type="radio" name="q11" value="3"> Contraceptive/Immunization pills<br>
+      <input type="radio" name="q11" value="4"> Vaccination / Rabies Vaccine<br>
+      <input type="radio" name="q11" value="5"> Alchohol<br>
+      <input type="radio" name="q11" value="6"> None of the above<br></p>
       <p>Have you had any surgery or Blood Transfusion in past six months?<br>
-      <input type="radio" name="surgery" value="1" checked> Major<br>
-      <input type="radio" name="surgery" value="2"> Minor<br>
-      <input type="radio" name="surgery" value="3"> Transplant<br>
-      <input type="radio" name="surgery" value="4"> Transfusion<br>
-      <input type="radio" name="surgery" value="5"> None of the above<br></p>
+      <input type="radio" name="q12" value="1"> Major<br>
+      <input type="radio" name="q12" value="2"> Minor<br>
+      <input type="radio" name="q12" value="3"> Transplant<br>
+      <input type="radio" name="q12" value="4"> Transfusion<br>
+      <input type="radio" name="q12" value="5"> None of the above<br></p>
      <p> For Women Donors only<br>
-      <input type="radio" name="wdnr" value="1" checked> You are having Menstruations/Periods<br>
-      <input type="radio" name="wdnr" value="2" > You are pregnant<br>
-      <input type="radio" name="wdnr" value="3" > You have a baby less than of 18 months<br>
-      <input type="radio" name="wdnr" value="4" > You have had an abortion in last three months<br>
-      <input type="radio" name="wdnr" value="5" > None of the above / Not applicable<br></p>
+      <input type="radio" name="q13" value="1"> You are having Menstruations/Periods<br>
+      <input type="radio" name="q13" value="2"> You are pregnant<br>
+      <input type="radio" name="q13" value="3"> You have a baby less than of 18 months<br>
+      <input type="radio" name="q13" value="4"> You have had an abortion in last three months<br>
+      <input type="radio" name="q13" value="5"> None of the above / Not applicable<br></p>
       <p>Do you disagree with any of these<br>
-      <input type="radio" name="disagree" value="1" checked> Blood donation is totally voluntary act and no inducement or remuneration has been offered for the same.<br>
-      <input type="radio" name="disagree" value="2"> Donation of blood is a medical procedure and that by donating voluntarily, I accept risks involved.<br>
-      <input type="radio" name="disagree" value="3">My blood will be tested for Hepatitis B and C, malarial parasite, HIV/AIDS and other venereal disease in addition to any other screening to ensure blood safety.<br>
-      <input type="radio" name="disagree" value="4">I prohibit any information provided by me and donation to be discussed with any other individual or government agency without my prior permission.<br>
-      <input type="radio" name="disagree" value="5">No, I agree with all the above points.<br></p>
+      <input type="radio" name="q14" value="1"> Blood donation is totally voluntary act and no inducement or remuneration has been offered for the same.<br>
+      <input type="radio" name="q14" value="2"> Donation of blood is a medical procedure and that by donating voluntarily, I accept risks involved.<br>
+      <input type="radio" name="q14" value="3">My blood will be tested for Hepatitis B and C, malarial parasite, HIV/AIDS and other venereal disease in addition to any other screening to ensure blood safety.<br>
+      <input type="radio" name="q14" value="4">I prohibit any information provided by me and donation to be discussed with any other individual or government agency without my prior permission.<br>
+      <input type="radio" name="q14" value="5">No, I agree with all the above points.<br></p>
 
 
 
