--- a/form.html
+++ b/form.html
@@ -1,47 +1,79 @@
 <!DOCTYPE html>
 <head>
 	<title>Blood Donation Form</title>
-	<link href="style.css" rel='stylesheet' type='text/css' />
+	<link href="css/style2.css" rel='stylesheet' type='text/css' />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href='http://fonts.googleapis.com/css?family=Lobster|Pacifico:400,700,300|Roboto:400,100,100italic,300,300italic,400italic,500italic,500' ' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lobster|Pacifico:400,700,300|Roboto:400,100,100italic,300,300italic,400italic,500italic,500' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,500,600,700,300' rel='stylesheet' type='text/css'>
 		<!--webfonts-->
 </head>
-<body >
- <div class="form_container">
+
+<body>
+
+  <header>
+    <center><img src="images/rakt.png" width="15%" height="15%"></center>
+  </header>
+
+  <div class="form_container" id="content">
 	<form action="donor.php" method="post" >
         <input type="hidden" name="cid" value="1">
         <input type="hidden" name="auth" value="f54e05cab9203e08d86606cb339e853d">
 
-		<h1 style="text-align: center;">General Details</h1>
+		<div class="form1">
+      <h1 style="text-align: center;">General Details</h1>
+      <ol>
+		    <li>Name: &emsp;&emsp; <input type="text" name="name" size="50">
 
-		<p>Name:<br><input type="text" name="name"><br></p>
-		<p>Roll No.(IITK):<br><input type="number" name="roll_no"><br>
-		<p>Gender: <br><input type="radio" name="gender" value="male"> Male<br>
-               <input type="radio" name="gender" value="female"> Female<br>
-                <input type="radio" name="gender" value="other"> Others<br></p>
-        <p>Contact No:<br> <input type="number" name="phone_no"><br></p>
-        <p>Age:<br> <input type="number" name="age" min="15" max="100"><br></p>
-        <p>Blood Group:<br> 
-			<input type="radio" name="blood_group" value="A+">A+<br>
-			<input type="radio" name="blood_group" value="A-" >A-<br>
-            <input type="radio" name="blood_group" value="B+" >B+<br>
-            <input type="radio" name="blood_group" value="B-" >B-<br>
-			<input type="radio" name="blood_group" value="O+" >O+<br>
-			<input type="radio" name="blood_group" value="O-" >O-<br>
-			<input type="radio" name="blood_group" value="AB+" >AB+<br>
-			<input type="radio" name="blood_group" value="AB-" >AB-<br>
-			<input type="radio" name="blood_group" value="notsure" >Others/Don't Know<br></p>
-        <p>Address: <br><input type="text" name="address"><br></p>
-        <p>Email Id: <br><input type="text" name="email"><br></p>
-        <p>How do you know about this Camp?<br>
-        	<input type="radio" name="camp_know" value="Posters">Posters<br>
-	        <input type="radio" name="camp_know" value="Mail">Mail<br>
-    	    <input type="radio" name="camp_know" value="Friends">Friends<br>
-            <input type="radio" name="camp_know" value="Facebook">Facebook<br>
-            <input type="radio" name="camp_know" value="Other">Other<br>
-        </p>
+  		  <li>Roll No.(IITK): &emsp;&emsp;  <input type="number" name="roll_no"><br>
+
+  		  <li>Gender: <br><br>
+          <table>
+          <tr>
+            <td><input type="radio" name="gender" value="M"> Male </td>
+            <td><input type="radio" name="gender" value="F"> Female </td>
+            <td><input type="radio" name="gender" value="O"> Others </td>
+          </tr>
+          </table>
+
+        <li>Contact No:  &emsp;&emsp; <input type="number" name="phone_no">
+
+        <li>Age: &emsp;&emsp; <input type="number" name="age" min="15" max="100">
+
+        <li>Blood Group: <br>
+          <table class="bg">
+          <tr>
+            <td><input type="radio" name="blood_group" value="A+"> A+ </td>
+  		      <td><input type="radio" name="blood_group" value="A-" > A-</td>
+          </tr><tr>
+            <td><input type="radio" name="blood_group" value="B+" > B+ </td>
+            <td><input type="radio" name="blood_group" value="B-" > B-</td>
+          </tr><tr>
+            <td><input type="radio" name="blood_group" value="O+" > O+</td>
+            <td><input type="radio" name="blood_group" value="O-" > O-</td>
+          </tr><tr>
+            <td><input type="radio" name="blood_group" value="AB+" > AB+</td>
+            <td><input type="radio" name="blood_group" value="AB-" > AB-</td>
+          </tr><tr>
+            <td><input type="radio" name="blood_group" value="notsure" >Others/Don't Know</td>
+          </tr>
+        </table>
+
+        <li>Address: <br><br>
+          <input type="text" name="address" size="100" maxlength="100"><br>
+
+        <li>Email Id: &emsp;&emsp; <input type="text" name="email">
+
+        <li>How do you know about this Camp?<br><br>
+          <input type="radio" name="camp_know" value="Posters"> Posters<br><br>
+          <input type="radio" name="camp_know" value="Mail"> Mail<br><br>
+          <input type="radio" name="camp_know" value="Friends"> Friends<br><br>
+          <input type="radio" name="camp_know" value="Facebook"> Facebook<br><br>
+          <input type="radio" name="camp_know" value="Other"> Other<br><br>
+      </ol>
+    </div>
+
+    <hr>
         
 		<h1 style="text-align: center;">Medical Details</h1>
 		
@@ -51,7 +83,7 @@
      <p>Was your last donation within last three months?<br>
       <input type="radio" name="q2" value="1"> Yes <br>
       <input type="radio" name="q2" value="2"> No <br>
-     <p> Did you have any discomfort while donation ?<br>
+     <p>Did you have any discomfort during last donation?<br>
        <input type="radio" name="q3" value="1"> Yes<br>
        <input type="radio" name="q3" value="2" > No<br>
      <p>Are you feeling well today?<br>
@@ -99,13 +131,13 @@
       <input type="radio" name="q12" value="3"> Transplant<br>
       <input type="radio" name="q12" value="4"> Transfusion<br>
       <input type="radio" name="q12" value="5"> None of the above<br></p>
-     <p> For Women Donors only<br>
+     <p> For Women Donors only, Is any of the following applicable?<br>
       <input type="radio" name="q13" value="1"> You are having Menstruations/Periods<br>
       <input type="radio" name="q13" value="2"> You are pregnant<br>
       <input type="radio" name="q13" value="3"> You have a baby less than of 18 months<br>
       <input type="radio" name="q13" value="4"> You have had an abortion in last three months<br>
       <input type="radio" name="q13" value="5"> None of the above / Not applicable<br></p>
-      <p>Do you disagree with any of these<br>
+      <p>Do you DISAGREE with any of these<br>
       <input type="radio" name="q14" value="1"> Blood donation is totally voluntary act and no inducement or remuneration has been offered for the same.<br>
       <input type="radio" name="q14" value="2"> Donation of blood is a medical procedure and that by donating voluntarily, I accept risks involved.<br>
       <input type="radio" name="q14" value="3">My blood will be tested for Hepatitis B and C, malarial parasite, HIV/AIDS and other venereal disease in addition to any other screening to ensure blood safety.<br>
