--- a/form.html
+++ b/form.html
@@ -20,14 +20,15 @@
         <input type="hidden" name="cid" value="1">
         <input type="hidden" name="auth" value="f54e05cab9203e08d86606cb339e853d">
 
-		<div class="form1">
+		<div class="form">
       <h1 style="text-align: center;">General Details</h1>
+
       <ol>
 		    <li>Name: &emsp;&emsp; <input type="text" name="name" size="50">
 
-  		  <li>Roll No.(IITK): &emsp;&emsp;  <input type="number" name="roll_no"><br>
+  		  <li>Roll No.(IITK): &emsp;&emsp;  <input type="number" name="roll_no">
 
-  		  <li>Gender: <br><br>
+  		  <li>Gender:
           <table>
           <tr>
             <td><input type="radio" name="gender" value="M"> Male </td>
@@ -36,27 +37,27 @@
           </tr>
           </table>
 
-        <li>Contact No:  &emsp;&emsp; <input type="number" name="phone_no">
+        <li>Contact No:  &emsp;&emsp; <input type="number" name="phone_no" size="10" minlength="10" maxlength="10">
 
-        <li>Age: &emsp;&emsp; <input type="number" name="age" min="15" max="100">
+        <li>Age: &emsp;&emsp; <input type="number" name="age" min="18" max="100">
 
-        <li>Blood Group: <br>
+        <li>Blood Group:
           <table class="bg">
-          <tr>
-            <td><input type="radio" name="blood_group" value="A+"> A+ </td>
-  		      <td><input type="radio" name="blood_group" value="A-" > A-</td>
-          </tr><tr>
-            <td><input type="radio" name="blood_group" value="B+" > B+ </td>
-            <td><input type="radio" name="blood_group" value="B-" > B-</td>
-          </tr><tr>
-            <td><input type="radio" name="blood_group" value="O+" > O+</td>
-            <td><input type="radio" name="blood_group" value="O-" > O-</td>
-          </tr><tr>
-            <td><input type="radio" name="blood_group" value="AB+" > AB+</td>
-            <td><input type="radio" name="blood_group" value="AB-" > AB-</td>
-          </tr><tr>
-            <td><input type="radio" name="blood_group" value="notsure" >Others/Don't Know</td>
-          </tr>
+            <tr>
+              <td><input type="radio" name="blood_group" value="A+"> A+ </td>
+    		      <td><input type="radio" name="blood_group" value="A-" > A-</td>
+            </tr><tr>
+              <td><input type="radio" name="blood_group" value="B+" > B+ </td>
+              <td><input type="radio" name="blood_group" value="B-" > B-</td>
+            </tr><tr>
+              <td><input type="radio" name="blood_group" value="O+" > O+</td>
+              <td><input type="radio" name="blood_group" value="O-" > O-</td>
+            </tr><tr>
+              <td><input type="radio" name="blood_group" value="AB+" > AB+</td>
+              <td><input type="radio" name="blood_group" value="AB-" > AB-</td>
+            </tr><tr>
+              <td><input type="radio" name="blood_group" value="notsure" >Others/Don't Know</td>
+            </tr>
         </table>
 
         <li>Address: <br><br>
@@ -64,87 +65,117 @@
 
         <li>Email Id: &emsp;&emsp; <input type="text" name="email">
 
-        <li>How do you know about this Camp?<br><br>
-          <input type="radio" name="camp_know" value="Posters"> Posters<br><br>
-          <input type="radio" name="camp_know" value="Mail"> Mail<br><br>
-          <input type="radio" name="camp_know" value="Friends"> Friends<br><br>
-          <input type="radio" name="camp_know" value="Facebook"> Facebook<br><br>
-          <input type="radio" name="camp_know" value="Other"> Other<br><br>
+        <li>How do you know about this Camp? 
+          <table class="tabw_80">
+            <tr>
+              <td><input type="radio" name="camp_know" value="Posters"> Posters</td>
+              <td><input type="radio" name="camp_know" value="Mail"> Mail</td>
+              <td><input type="radio" name="camp_know" value="Friends"> Friends</td>
+              <td><input type="radio" name="camp_know" value="Facebook"> Facebook</td>
+              <td><input type="radio" name="camp_know" value="Other"> Other</td>
+            </tr>
+          </table>
       </ol>
     </div>
 
-    <hr>
-        
-		<h1 style="text-align: center;">Medical Details</h1>
+    <br><hr><br>
+     
+    <div class="form">   
+		<h1 style="text-align: center;">Medical Details</h1><br>
 		
-     <p>Have you donated blood before?<br> 
+     <!-- <p>Have you donated blood before?<br> 
       <input type="radio" name="q1" value="1"> Yes <br>
-      <input type="radio" name="q1" value="2" > No <br></p>
-     <p>Was your last donation within last three months?<br>
-      <input type="radio" name="q2" value="1"> Yes <br>
-      <input type="radio" name="q2" value="2"> No <br>
-     <p>Did you have any discomfort during last donation?<br>
-       <input type="radio" name="q3" value="1"> Yes<br>
-       <input type="radio" name="q3" value="2" > No<br>
-     <p>Are you feeling well today?<br>
-      <input type="radio" name="q4" value="1"> Yes<br>
-      <input type="radio" name="q4" value="2"> No<br></p>
-      <p>Did you sleep well last night?<br>
-      <input type="radio" name="q5" value="1"> Yes<br>
-      <input type="radio" name="q5" value="2"> No<br></p>
-      <p>Have you had anything to eat in last 4 hours?<br>
-      <input type="radio" name="q6" value="1"> Yes<br>
-      <input type="radio" name="q6" value="2"> No<br></p>
-      <p>Do you have any reason to believe that you are infected with Hepatitis, Malaria,HIV/AIDS , Veneral Disease?<br>
-      <input type="radio" name="q7" value="1"> Yes<br>
-      <input type="radio" name="q7" value="2"> No<br></p>
-      <p>In last six months have you had history of any of the following?<br>
-      <input type="radio" name="q8" value="1"> Unexpected Weight Loss<br>
-      <input type="radio" name="q8" value="2"> Repeated Diarrhea<br>
-      <input type="radio" name="q8" value="3"> Continous Cold n Cough<br>
-      <input type="radio" name="q8" value="4"> Continous Low Grade Fever<br>
-      <input type="radio" name="q8" value="5" > None of the above<br></p>
-      <p>In last six months have you had any of the following?<br>
-      <input type="radio" name="q9" value="1"> Tattooing<br>
-      <input type="radio" name="q9" value="2"> Ear/Body Piercing<br>
-      <input type="radio" name="q9" value="3"> Dental Extraction<br>
-      <input type="radio" name="q9" value="4"> Accupuncture<br>
-      <input type="radio" name="q9" value="5"> None of the above<br></p>
-      <p>Do you suffer from any of the following diseases?<br>
-      <input type="radio" name="q10" value="1"> Heart/Lung/Kidney Disease<br>
-      <input type="radio" name="q10" value="2"> Cancer/Malignant Disease<br>
-      <input type="radio" name="q10" value="3"> Malaria/Tuberculosis<br>
-      <input type="radio" name="q10" value="4"> Diabetes<br>
-      <input type="radio" name="q10" value="5"> Allergic Disease/Jaundice/Hepatitis B-C<br>
-      <input type="radio" name="q10" value="6"> Abnormal Bleeding Tendency/Fainting Spells<br>
-      <input type="radio" name="q10" value="7"> None of the above<br></p>
-      <p>Have you had any of the following in last 72 hours?<br>
-      <input type="radio" name="q11" value="1"> Antibiotics/Aspirin/Antiallergy<br>
-      <input type="radio" name="q11" value="2"> Insulins/Steroids/Hormones<br>
-      <input type="radio" name="q11" value="3"> Contraceptive/Immunization pills<br>
-      <input type="radio" name="q11" value="4"> Vaccination / Rabies Vaccine<br>
-      <input type="radio" name="q11" value="5"> Alchohol<br>
-      <input type="radio" name="q11" value="6"> None of the above<br></p>
-      <p>Have you had any surgery or Blood Transfusion in past six months?<br>
-      <input type="radio" name="q12" value="1"> Major<br>
-      <input type="radio" name="q12" value="2"> Minor<br>
-      <input type="radio" name="q12" value="3"> Transplant<br>
-      <input type="radio" name="q12" value="4"> Transfusion<br>
-      <input type="radio" name="q12" value="5"> None of the above<br></p>
-     <p> For Women Donors only, Is any of the following applicable?<br>
-      <input type="radio" name="q13" value="1"> You are having Menstruations/Periods<br>
-      <input type="radio" name="q13" value="2"> You are pregnant<br>
-      <input type="radio" name="q13" value="3"> You have a baby less than of 18 months<br>
-      <input type="radio" name="q13" value="4"> You have had an abortion in last three months<br>
-      <input type="radio" name="q13" value="5"> None of the above / Not applicable<br></p>
-      <p>Do you DISAGREE with any of these<br>
-      <input type="radio" name="q14" value="1"> Blood donation is totally voluntary act and no inducement or remuneration has been offered for the same.<br>
-      <input type="radio" name="q14" value="2"> Donation of blood is a medical procedure and that by donating voluntarily, I accept risks involved.<br>
-      <input type="radio" name="q14" value="3">My blood will be tested for Hepatitis B and C, malarial parasite, HIV/AIDS and other venereal disease in addition to any other screening to ensure blood safety.<br>
-      <input type="radio" name="q14" value="4">I prohibit any information provided by me and donation to be discussed with any other individual or government agency without my prior permission.<br>
-      <input type="radio" name="q14" value="5">No, I agree with all the above points.<br></p>
-
-
+      <input type="radio" name="q1" value="2" > No <br></p> -->
+    <ol>
+      <li>Was your last donation within last three months?
+        <table class="tabw_100">
+          <tr>
+            <td><input type="radio" name="q2" value="1"> Yes </td>
+            <td><input type="radio" name="q2" value="2"> No / NA</td>
+          </tr>
+        </table>
+      <li>Did you have any discomfort during last donation?
+        <table class="tabw_100">
+          <tr>
+            <td><input type="radio" name="q3" value="1"> Yes</td>
+            <td><input type="radio" name="q3" value="2" > No / NA</td>
+          </tr>
+        </table>
+      <li>Are you feeling well today?
+        <table class="tabw_80">
+          <tr>
+            <td><input type="radio" name="q4" value="1"> Yes</td>
+            <td><input type="radio" name="q4" value="2"> No</td>
+          </tr>
+        </table>
+      <li>Did you sleep well last night?
+        <table class="tabw_80">
+          <tr>
+            <td><input type="radio" name="q5" value="1"> Yes</td>
+            <td><input type="radio" name="q5" value="2"> No</td>
+          </tr>
+        </table>
+      <li>Have you had anything to eat in last 4 hours?
+        <table class="tabw_80">
+          <tr>
+            <td><input type="radio" name="q6" value="1"> Yes</td>
+            <td><input type="radio" name="q6" value="2"> No</td>
+          </tr>
+        </table>
+      <li>Do you have any reason to believe that you are infected with Hepatitis, Malaria,HIV/AIDS , Veneral Disease?
+        <table class="tabw_80">
+          <tr>
+            <td><input type="radio" name="q7" value="1"> Yes</td>
+            <td><input type="radio" name="q7" value="2"> No</td>
+          </tr>
+        </table>
+      <li>In last six months have you had history of any of the following?<br>
+        <input type="radio" name="q8" value="1"> Unexpected Weight Loss<br>
+        <input type="radio" name="q8" value="2"> Repeated Diarrhea<br>
+        <input type="radio" name="q8" value="3"> Continous Cold n Cough<br>
+        <input type="radio" name="q8" value="4"> Continous Low Grade Fever<br>
+        <input type="radio" name="q8" value="5" > None of the above<br>
+      <li>In last six months have you had any of the following?<br>
+        <input type="radio" name="q9" value="1"> Tattooing<br>
+        <input type="radio" name="q9" value="2"> Ear/Body Piercing<br>
+        <input type="radio" name="q9" value="3"> Dental Extraction<br>
+        <input type="radio" name="q9" value="4"> Accupuncture<br>
+        <input type="radio" name="q9" value="5"> None of the above<br>
+      <li>Do you suffer from any of the following diseases?<br>
+        <input type="radio" name="q10" value="1"> Heart/Lung/Kidney Disease<br>
+        <input type="radio" name="q10" value="2"> Cancer/Malignant Disease<br>
+        <input type="radio" name="q10" value="3"> Malaria/Tuberculosis<br>
+        <input type="radio" name="q10" value="4"> Diabetes<br>
+        <input type="radio" name="q10" value="5"> Allergic Disease/Jaundice/Hepatitis B-C<br>
+        <input type="radio" name="q10" value="6"> Abnormal Bleeding Tendency/Fainting Spells<br>
+        <input type="radio" name="q10" value="7"> None of the above<br>
+      <li>Have you had any of the following in last 72 hours?<br>
+        <input type="radio" name="q11" value="1"> Antibiotics/Aspirin/Antiallergy<br>
+        <input type="radio" name="q11" value="2"> Insulins/Steroids/Hormones<br>
+        <input type="radio" name="q11" value="3"> Contraceptive/Immunization pills<br>
+        <input type="radio" name="q11" value="4"> Vaccination / Rabies Vaccine<br>
+        <input type="radio" name="q11" value="5"> Alchohol<br>
+        <input type="radio" name="q11" value="6"> None of the above<br>
+      <li>Have you had any surgery or Blood Transfusion in past six months?<br>
+        <input type="radio" name="q12" value="1"> Major<br>
+        <input type="radio" name="q12" value="2"> Minor<br>
+        <input type="radio" name="q12" value="3"> Transplant<br>
+        <input type="radio" name="q12" value="4"> Transfusion<br>
+        <input type="radio" name="q12" value="5"> None of the above<br>
+      <li>For Women Donors only, Is any of the following applicable?<br>
+        <input type="radio" name="q13" value="1"> You are having Menstruations/Periods<br>
+        <input type="radio" name="q13" value="2"> You are pregnant<br>
+        <input type="radio" name="q13" value="3"> You have a baby less than of 18 months<br>
+        <input type="radio" name="q13" value="4"> You have had an abortion in last three months<br>
+        <input type="radio" name="q13" value="5"> None of the above / Not applicable<br>
+      <li>Do you DISAGREE with any of these<br>
+        <input type="radio" name="q14" value="1"> Blood donation is totally voluntary act and no inducement or remuneration has been offered for the same.<br>
+        <input type="radio" name="q14" value="2"> Donation of blood is a medical procedure and that by donating voluntarily, I accept risks involved.<br>
+        <input type="radio" name="q14" value="3">My blood will be tested for Hepatitis B and C, malarial parasite, HIV/AIDS and other venereal disease in addition to any other screening to ensure blood safety.<br>
+        <input type="radio" name="q14" value="4">I prohibit any information provided by me and donation to be discussed with any other individual or government agency without my prior permission.<br>
+        <input type="radio" name="q14" value="5">No, I agree with all the above points.<br></p>
+    </ol>
+  </div>
 
 <div class="submit_button"><input type="submit" value="Submit"></div>
 
