--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Blood Donation Form</title>
-	<link href="css/style2.css" rel='stylesheet' type='text/css' />
+	<link href="css/main.css" rel='stylesheet' type='text/css' />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href='http://fonts.googleapis.com/css?family=Lobster|Pacifico:400,700,300|Roboto:400,100,100italic,300,300italic,400italic,500italic,500' rel='stylesheet' type='text/css'>
