small change form

--- a/form.html
+++ b/form.html
@@ -98,7 +98,7 @@
           </select>
 
           <div id="addr_div" style="display: none">
-            <br>Other: &emsp;&emsp; <input type="text" name="address" size="75" maxlength="100" required>
+            <br>Other: &emsp;&emsp; <input type="text" name="address" size="75" maxlength="100">
           </div>
 
         <li>Email Id: &emsp;&emsp; <input type="text" name="email" required>
